src/styles.scss
/* ... */
body.font-normal {
  font-size: 1rem; /* 16px - default */
}

body.font-large {
  font-size: 1.125rem; /* 18px */
}

/* Font size adjustments for headings */
body.font-small h1 {
  font-size: 1.75rem;
}
body.font-small h2 {
  font-size: 1.5rem;
}
body.font-small h3 {
  font-size: 1.25rem;
}
body.font-small h4 {
  font-size: 0.875rem;
  margin: 0;
}

body.font-large h1 {
  font-size: 2.5rem;
}
body.font-large h2 {
  font-size: 2rem;
}
body.font-large h3 {
  font-size: 1.75rem;
}
body.font-large h4 {
  font-size: 1.5rem;
}

